Regression: Circular gizmo drawing affected #99182

Closed
opened 2022-06-26 11:47:18 +02:00 by Pratik Borhade · 8 comments
Member

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: Intel(R) UHD Graphics 620 Intel 4.5.0 - Build 30.0.101.1994

Blender Version
Broken: version: 3.3 (a646a4b47e4c50e2b7a8ef67041dfdceb62fdc2c)
Not bisected but I suspect cc4d46d91e introduces this issue

Short description of error
Circular gizmo (eg. inset face tool) appears in octagonal shape

Exact steps for others to reproduce the error

  • Open default file
  • With cube selected, switch to edit mode
  • Select inset tool
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: Intel(R) UHD Graphics 620 Intel 4.5.0 - Build 30.0.101.1994 **Blender Version** Broken: version: 3.3 (`a646a4b47e4c50e2b7a8ef67041dfdceb62fdc2c`) Not bisected but I suspect cc4d46d91e introduces this issue **Short description of error** Circular gizmo (eg. inset face tool) appears in octagonal shape **Exact steps for others to reproduce the error** - Open default file - With cube selected, switch to edit mode - Select inset tool
Author
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Author
Member

Added subscriber: @Chris_Blackbourn

Added subscriber: @Chris_Blackbourn
Author
Member

@Chris_Blackbourn, can you check?

@Chris_Blackbourn, can you check?

Confirmed.
Potential hotfix D15295

Confirmed. Potential hotfix [D15295](https://archive.blender.org/developer/D15295)
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Thanks

Thanks

This issue was referenced by 81c5b759d6

This issue was referenced by 81c5b759d6ad86237f4d055ff8749bc14a7d369b
Chris Blackbourn was assigned by Pratik Borhade 2022-06-27 04:41:38 +02:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99182
No description provided.