Fix T99182: Hard code screen_scale for circle drawing in 3D